project web2 added

--- a/web2-122/sass/style.scss
+++ b/web2-122/sass/style.scss
@@ -1,7 +1,7 @@
-@font-face 
-	font-family: yekan 
-	src: url(../assest/font/Yekan.ttf) 
-
+@font-face {
+    font-family: yekan;
+    src: url(../assest/font/Yekan.ttf);
+}
 body,button,a 
 	font-family: yekan, sans-serif 
 
